[project]
name = "agents-app"
version = "0.1.0"
description = ""
authors = [
    {name = "hxastur",email = "arz.mikhail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.24,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (==0.115.9)",
    "langgraph (>=0.3.34,<0.4.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "langgraph-cli (>=0.2.7,<0.3.0)",
    "langgraph-api (>=0.1.17,<0.2.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "langchain-community (>=0.3.22,<0.4.0)",
    "hf-xet (>=1.0.5,<2.0.0)",
    "chromadb (>=1.0.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
